hphp/test/quick/dv_i0.php.expectf

Fatal error: Use of the `{}` subscript operator is deprecated;  use `[]` instead. in %s/dv_i0.php on line 3
